fixed overflow on 1px on layout and customized scrollbar

--- a/Geesemon.WebClient/src/App.css
+++ b/Geesemon.WebClient/src/App.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
     color: white;
     font-size: 16px;
+    scrollbar-color: #444444 #212121;
+    scrollbar-width: thin;
+}
+
+*::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+    background: #212121;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: #444444;
 }
 
 .wrapperApp {
@@ -14,11 +26,6 @@
     height: 100vh;
     max-width: 1682px;
     margin: 0 auto;
-}
-
-.innerApp {
-    height: 100%;
-    padding: 1px;
 }
 
 .authedRoutes {
